画像を差し替え

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>ボタンを推してみよ</p>
     <button>推せよ</button>
     <figure>
-      <img src="oshi.jpg" />
+      <img width="400" src="oshi.png" />
       <figcaption>オレの推し</figcaption>
     </figure>
 
